--- a/ref.bib
+++ b/ref.bib
@@ -81,6 +81,22 @@
   organization={ACM}
 }
 
+@inproceedings{qing2014feature,
+  title={Unsupervised feature selection algorithm based on spectral clustering and analysis variance},
+  author={Qing Qiang Wu, Yi Dong Wang, Zhi Yan Wang and Kun Hong Liu},
+  booktitle={Future Information Engineering and Manufacturing Science: Proceedings of the 2014 International Conference on Future Information Engineering and Manufacturing Science},
+  year={2015},
+  organization={CRC Press}
+}
+
+@inproceedings{boutsidis2009unsupervised,
+  title={Unsupervised feature selection for the $ k $-means clustering problem},
+  author={Boutsidis, Christos and Drineas, Petros and Mahoney, Michael W},
+  booktitle={Advances in Neural Information Processing Systems},
+  pages={153--161},
+  year={2009}
+}
+
 @inproceedings{blackburn2014stfu,
  author = {Blackburn, Jeremy and Kwak, Haewoon},
  title = {STFU NOOB!: Predicting Crowdsourced Decisions on Toxic Behavior in Online Games},
