--- a/main_mestrado.tex
+++ b/main_mestrado.tex
@@ -15,6 +15,9 @@
 \usepackage[utf8x]{inputenc}
 \usepackage{epigraph}
 
+\usepackage{amssymb}
+\newcommand*{\field}[1]{\mathbb{#1}}%
+
 \usepackage{booktabs} % For formal tables
 \usepackage[inline]{enumitem}
 \usepackage{caption}
