--- a/main_mestrado.tex
+++ b/main_mestrado.tex
@@ -21,6 +21,7 @@
 \usepackage{booktabs} % For formal tables
 \usepackage[inline]{enumitem}
 \usepackage{caption}
+\captionsetup{labelfont=bf}
 %-------------------------- Para usar acentuacaoo em sistemas ISO8859-1 ------------------------------------
 % Se estiver usando o Microsoft Windows ou linux com essa codificacao, descomente essa linhas abaixo
 % e comente as linhas referentes ao UTF8
