--- a/ref.bib
+++ b/ref.bib
@@ -81,6 +81,16 @@
   organization={ACM}
 }
 
+@article{gan2017k,
+  title={k-means clustering with outlier removal},
+  author={Gan, Guojun and Ng, Michael Kwok-Po},
+  journal={Pattern Recognition Letters},
+  volume={90},
+  pages={8--14},
+  year={2017},
+  publisher={Elsevier}
+}
+
 @inproceedings{qing2014feature,
   title={Unsupervised feature selection algorithm based on spectral clustering and analysis variance},
   author={Qing Qiang Wu, Yi Dong Wang, Zhi Yan Wang and Kun Hong Liu},
