improve correlation plot description

--- a/cap1.tex
+++ b/cap1.tex
@@ -477,7 +477,7 @@ Após a normalização, \fj{o}{as caracter\'isticas do} conjunto de dados $X$ \f
 \begin{figure*}
   \centering
   \includegraphics[width=1.0\textwidth]{correlations}%
-  \caption{Gráfico de correlação para as características de desempenho das equipes. \fj{}{Cada c\'elula ou n\'umero no gr\'afico representa a correla\c{c}\~ao de um par de caracter\'isticas do conjunto de dados $X$. A escala de cores indica a intensidade das correla\c{c}\~oes, quanto mais forte for uma cor, mais forte é a correla\c{c}\~ao das caracter\'isticas. As cores em tom azul indicam correla\c{c}\~oes positivas. As cores em tom vermelho indicam correla\c{c}\~oes negativas. }}
+  \caption{Gráfico de correlação para as características de desempenho das equipes. Cada c\'elula ou valor no gr\'afico representa a correla\c{c}\~ao de um par de caracter\'isticas do conjunto de dados $X$. A escala de cores indica a intensidade das correla\c{c}\~oes, quanto mais forte for uma cor, mais forte é a correla\c{c}\~ao das caracter\'isticas. As cores em tom azul indicam correla\c{c}\~oes positivas. As cores em tom vermelho indicam correla\c{c}\~oes negativas. No gráfico, as correlações com \textit{p-value > 0,05} são consideradas insignificantes. Neste caso, os valores do coeficiente de correlação são indicados com um "X". }
   \label{fig:correlations}
 \end{figure*}
 
